# RLProject_StateEmbeddings

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  flake.nix  move_to_s3.sh  pyproject.toml
data/dqn_logs/cartpole/DQN_1/: events.out.tfevents.1754825109.2b93e6312745.77604.1
data/dqn_logs/cartpole/DQN_2/: events.out.tfevents.1754825245.2b93e6312745.77604.2
data/dqn_logs/minigrid-unlock/DQN_1/: events.out.tfevents.1754822628.2b93e6312745.77604.0
data/ppo_logs/cartpole/DQN_1/: events.out.tfevents.1754859826.ark.36806.0
embedding_saves/: embedding_net_cartpole-pretrain_combined.pth  embedding_net_cartpole-pretrain_qloss.pth  embedding_net_minigrid-unlock-pretrain_combined.pth
remote_logs/breakout/DQN_1/: events.out.tfevents.1754706025.2b93e6312745.54518.4
remote_logs/breakout/DQN_2/: events.out.tfevents.1754707779.2b93e6312745.54518.5
remote_logs/cartpole/DQN_1/: events.out.tfevents.1754709832.2b93e6312745.54518.6
remote_logs/cartpole/DQN_2/: events.out.tfevents.1754709881.2b93e6312745.54518.7
remote_logs/minigrid-memory/DQN_1/: events.out.tfevents.1754696048.2b93e6312745.54518.0
remote_logs/minigrid-memory/DQN_2/: events.out.tfevents.1754698314.2b93e6312745.54518.1
remote_logs/minigrid-unlock/DQN_1/: events.out.tfevents.1754701048.2b93e6312745.54518.2
remote_logs/minigrid-unlock/DQN_2/: events.out.tfevents.1754703313.2b93e6312745.54518.3
remote_logs/seaquest/DQN_1/: events.out.tfevents.1754709938.2b93e6312745.54518.8
remote_logs/seaquest/DQN_2/: events.out.tfevents.1754711860.2b93e6312745.54518.9
remote_logs/seaquest_markov/DQN_1/: events.out.tfevents.1754714070.2b93e6312745.54518.10
remote_logs/seaquest_markov/DQN_2/: events.out.tfevents.1754715876.2b93e6312745.54518.11
src/: .seaquest_experiment.py.swp  breakout_experiment.py  cartpole_experiment.py  graph.ipynb  graphs.py  main.py  minigrid_memory_experiment.py  minigrid_unlock_experiment.py  plotting.ipynb  seaquest_experiment.py  seaquestmarkov_experiment.py  test.ipynb
src/envs/: seaquest_markov.py
src/eval/: __init__.py
src/state_embedding/: __init__.py  callbacks.py  context_env.py  dqn.py  embed.py  embedding.py  embedding_eval.py  env.py  qnetwork.py  replay_buffer.py  state_embedd_eval.py  train.py
src/state_embedding/dqn/: __init__.py  dqn.py  qnetwork.py
tests/: test_replay_buffer.py
(+152 files in other folders)
