[project]
name = "state-embedding"
version = "0.1.0"
description = "Pretrain state embeddings"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "gymnasium[all]>=1.1.1",
    "minatar>=1.0.15",
    "pre-commit>=4.2.0",
    "stable-baselines3>=2.6.0",
    "tbparse>=0.0.9",
    "tensorboard>=2.20.0",
    "uv>=0.8.4",
]

[project.scripts]
hello = "state_embedding:hello"
main = "main:call_eval_loop"
graphs = "graphs:graphs"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.6.7",
]
