[project]
name = "state-embedding"
version = "0.1.0"
description = "Pretrain state embeddings"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "gymnasium[all]>=1.1.1",
    "minatar>=1.0.15",
    "minigrid>=3.0.0",
    "papermill>=2.6.0",
    "pre-commit>=4.2.0",
    "stable-baselines3>=2.6.0",
    "tbparse>=0.0.9",
    "tensorboard>=2.20.0",
    "uv>=0.8.4",
]

[project.scripts]
hello = "state_embedding:hello"
main = "main:main"
graphs = "graphs:graphs"
test_qloss = "state_embedding:test_qloss"
test_combined = "state_embedding:test_combined"
seaquest_train = "seaquest_experiment:train"
seaquest_pretrain = "seaquest_experiment:pretrain"

eval_pretrain_breakout = "eval:eval_pretrain_breakout"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.6.7",
]
