[project]
name = "state-embedding"
version = "0.1.0"
description = "Pretrain state embeddings"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "gymnasium[all]>=1.1.1",
    "minatar>=1.0.15",
    "minigrid>=3.0.0",
    "numpy>=2.3.1",
    "papermill>=2.6.0",
    "pre-commit>=4.2.0",
    "stable-baselines3>=2.6.0",
    "tbparse>=0.0.9",
    "tensorboard>=2.20.0",
    "uv>=0.8.4",
]

[project.scripts]
main = "main:main"
graphs = "graphs:graphs"
seaquest_train = "seaquest_experiment:train"
seaquest_pretrain = "seaquest_experiment:pretrain"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.6.7",
]
